--- a/src/css_pages/TaskPage.css
+++ b/src/css_pages/TaskPage.css
@@ -90,10 +90,8 @@
 }
 
 .task-item-chevron {
-  width: 18px;
-  height: 18px;
-  opacity: 0.4;
-  filter: invert(1);
+  width: 40px;
+  height: 40px;
 }
 
 .task-empty {
